# dwarfmatic

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
resources/models/ball/: ball.fbx
resources/models/cube/: cube.fbx
resources/shaders/: model_fragment.glsl  model_vertex.glsl
src/: application.cpp  application.h  glfw_window.cpp  glfw_window.h  main.cpp  resource_manager.cpp  resource_manager.h  scene.cpp  scene.h  ubo.cpp  ubo.h
src/ecs/: components.h  entity.h  system.h  system_manager.cpp  system_manager.h  uuid.cpp  uuid.h
src/ecs/systems/: lighting_system.h  rendering_system.h
src/rendering/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  directional_light.cpp  directional_light.h  lighting.h  mesh.cpp  mesh.h  model.cpp  model.h  point_light.cpp  point_light.h  shader.cpp  shader.h  spot_light.cpp  spot_light.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h
src/utils/: assertion.h  gl_debug.cpp  gl_debug.h  logging.cpp  logging.h  profiling.cpp  profiling.h
